Initial impl of modules in the javascript CLI.
All should be hooked up apart from the actual bundling of now standalone
javascript support with the CLI. This will going to need some pom.xml love.

We now bundle our own ScriptEngine implementation based on the Phobos
javascript engine with modifications inspired by the version of the script
engine in JDK 1.6.30.